--- a/layout/container.html
+++ b/layout/container.html
@@ -9,14 +9,22 @@
 </style>
 
 <!-- 沒有套用 container -->
-
+<div class="box">
+  Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde saepe suscipit reiciendis dicta dolorem tenetur, nihil dolore iste. Soluta ipsa id sit ratione. Molestias libero ex similique est, quod vitae?
+</div>
 
 <!-- 套用固定寬度 container，適合限制寬度的畫面 -->
-
+<div class="container">
+  <div class="box">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente nihil itaque asperiores quisquam. Eos est molestiae quibusdam, reiciendis nesciunt possimus atque repellendus nobis eligendi nihil neque iusto voluptatum! Repudiandae, totam!</div>
+</div>
 <!-- 只有在 xl 的寬度下才會限制寬度，否則都會以滿版呈現 -->
-
+<div class="container-xl">
+  <div class="box">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem odio dicta ipsa ratione nobis deleniti tenetur quaerat beatae voluptate excepturi et facilis, illum cupiditate unde totam? Dolorem obcaecati incidunt laudantium!</div>
+</div>
 <!-- 套用 container-fluid，適合接近滿版的畫面 -->
-
+<div class="container-fluid">
+  <div class="box">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem odio dicta ipsa ratione nobis deleniti tenetur quaerat beatae voluptate excepturi et facilis, illum cupiditate unde totam? Dolorem obcaecati incidunt laudantium!</div>
+</div>
 <!-- 🙇🙇練習結束🙇🙇 -->
 
   <div class="btn-group position-fixed" style="top: 66px; right: 10px">
