--- a/layout/with_utilities.html
+++ b/layout/with_utilities.html
@@ -13,7 +13,7 @@
 
 <h4>置中排列</h4>
 
-<div class="row 練習">
+<div class="row justify-content-center">
   <div class="col-8">
     <div class="box"></div>
   </div>
@@ -21,7 +21,7 @@
 
 <h4>分散排列</h4>
 
-<div class="row 練習">
+<div class="row justify-content-around">
   <div class="col-3">
     <div class="box"></div>
   </div>
@@ -35,7 +35,7 @@
 
 <h4>兩端分散</h4>
 
-<div class="row 練習">
+<div class="row justify-content-between">
   <div class="col-4">
     <div class="box"></div>
   </div>
@@ -46,7 +46,7 @@
 
 <h4>反轉</h4>
 
-<div class="row 練習">
+<div class="row flex-row-reverse">
   <div class="col-6">
     <div class="box">1</div>
   </div>
@@ -57,7 +57,7 @@
 
 <h4>垂直置中</h4>
 
-<div class="row 練習">
+<div class="row align-items-center">
   <div class="col-6">
     <div class="box" style="height: 200px;">1</div>
   </div>
@@ -72,7 +72,7 @@
   <div class="col-6">
     <div class="box" style="height: 200px;">1</div>
   </div>
-  <div class="col-6 練習">
+  <div class="col-6 align-self-center">
     <div class="box">2</div>
   </div>
 </div>
@@ -80,13 +80,13 @@
 <h4>order 排序</h4>
 
 <div class="row">
-  <div class="col-4 練習">
+  <div class="col-4 order-3">
     <div class="box">1</div>
   </div>
-  <div class="col-4 練習">
+  <div class="col-4 order-1">
     <div class="box">2</div>
   </div>
-  <div class="col-4 練習">
+  <div class="col-4 order-2">
     <div class="box">3</div>
   </div>
 </div>
@@ -102,7 +102,7 @@
   <div class="col-2">
     <div class="box"></div>
   </div>
-  <div class="col-4 練習">
+  <div class="col-4 ms-auto">
     <div class="box"></div>
   </div>
 </div>
@@ -110,19 +110,37 @@
 <h4>換行間距（使用 utilities margin）</h4>
 
 <div class="row">
-  <div class="col-6 練習">
+  <div class="col-6 mb-2">
     <div class="box"></div>
   </div>
-  <div class="col-6 練習">
+  <div class="col-6 mb-2">
     <div class="box"></div>
   </div>
-  <div class="col-6 練習">
+  <div class="col-6 mb-2">
     <div class="box"></div>
   </div>
-  <div class="col-6 練習">
+  <div class="col-6 mb-2">
     <div class="box"></div>
   </div>
 </div>
+<hr>
+<h4>換行間距（使用 gutter）</h4>
+<!-- 亦可以使用 gutter -->
+<div class="row">
+  <div class="col-6 g-2">
+    <div class="box"></div>
+  </div>
+  <div class="col-6 g-2">
+    <div class="box"></div>
+  </div>
+  <div class="col-6 g-2">
+    <div class="box"></div>
+  </div>
+  <div class="col-6 g-2">
+    <div class="box"></div>
+  </div>
+</div>
+
 
 
 
