pratice_column finished

--- a/layout/practice_column.html
+++ b/layout/practice_column.html
@@ -61,7 +61,7 @@
 
 <section class="bg-light">
   <div class="container">
-    <div class="row justify-content-center align-items-center py-3 ">
+    <div class="row justify-content-center align-items-center mb-4 ">
       <div class="col-md-5 ">
         <img src="https://images.unsplash.com/photo-1630016537018-d46c0ad5c6bb?ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxMHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1400&q=60" alt="" class="img-fluid">
       </div>
@@ -112,7 +112,7 @@
       </ul>
     </div>
     <div class="col-md-9">
-      <div class="row">
+      <div class="row gx-2">
         <div class="col-md-4">
           <div class="card">
             <img src="https://images.unsplash.com/photo-1629994958192-8dbe0701da9c?ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw3fHx8ZW58MHx8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1400&q=60" class="card-img-top" alt="...">
