--- a/layout/gutter.html
+++ b/layout/gutter.html
@@ -1,6 +1,6 @@
-<!DOCTYPE html><html lang="zh-TW"><head><title>Gutter 的運用</title><meta name="viewport" content="width=device-width, initial-scale=1"><link href="images/favicon.ico" rel="shortcut icon"><meta charset="UTF-8"><script src="/javascripts/vendor.js"></script></head><body class="bg-lighter">
+<!DOCTYPE html><html lang="zh-TW"><head><title>Gutter 的運用 </title><meta name="viewport" content="width=device-width, initial-scale=1"><link href="images/favicon.ico" rel="shortcut icon"><meta charset="UTF-8"><script src="/javascripts/vendor.js"></script></head><body class="bg-lighter">
 <div class="container main my-5"><div class="row justify-content-center"><main class="col-md-8 post">
-<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">Gutter 的運用</h1><small>檔名：<code>gutter.html</code></small></div>
+<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">Gutter 的運用 </h1><small > 檔名：<code>gutter.html</code></small></div>
 <!-- 🔥🔥練習開始🔥🔥 -->
 <style>
   .box {
@@ -9,7 +9,7 @@
   }
 </style>
 
-<p>查看 gutter 的原始碼</p>
+<p> 查看 gutter 的原始碼 </p>
 
 <div class="row">
   <div class="col-4"><div class="box"></div></div>
@@ -18,19 +18,19 @@
 </div>
 
 
-<h2>可調整的 gutter</h2>
+<h2> 可調整的 gutter</h2>
 
-<p>使用 gx-{ 1-5 } 調整水平間距</p>
+<p> 使用 gx-{ 1-5 } 調整水平間距 </p>
 
-<div class="row 練習">
+<div class="row gx-3">
   <div class="col-4"><div class="box"></div></div>
   <div class="col-4"><div class="box"></div></div>
   <div class="col-4"><div class="box"></div></div>
 </div>
 
-<h4>運用情境</h4>
+<h4> 運用情境 </h4>
 
-<p>在內層加上 gx-2</p>
+<p> 在內層加上 gx-2</p>
 
 <div class="row">
   <div class="col-6"><div class="box"></div></div>
@@ -50,9 +50,9 @@
 </div>
 
 
-<h4>延伸：垂直 gutter</h4>
-<p>使用方式：gx, gy, g</p>
-<!-- g 表示x,y都有 -->
+<h4> 延伸：垂直 gutter</h4>
+<p> 使用方式：gx, gy, g</p>
+<!-- g 表示 x,y 都有 -->
 <div class="row gx-1 gy-2">
   <div class="col-6">
     <div class="box"></div>
@@ -69,9 +69,9 @@
 </div>
 
 
-<h4>延伸：no-gutters</h4>
+<h4> 延伸：no-gutters</h4>
 
-<p>使用 gx-0 移除 gutter</p>
+<p> 使用 gx-0 移除 gutter</p>
 
 <div class="row gx-0">
   <div class="col-6">
@@ -88,11 +88,11 @@
   </div>
 </div>
 
-<h4>響應式</h4>
+<h4> 響應式 </h4>
 
 <ul>
-  <li>行動版移除間距</li>
-  <li>桌面版使用大間距</li>
+  <li> 行動版移除間距 </li>
+  <li> 桌面版使用大間距 </li>
 </ul>
 
 <div class="row gx-0 gx-lg-4">
@@ -112,9 +112,9 @@
 
 <hr>
 
-<h2>行列式</h2>
+<h2> 行列式 </h2>
 
-<p>使用 row-cols-{欄數} 定義內層欄數</p>
+<p> 使用 row-cols-{欄數} 定義內層欄數 </p>
 
 <div class="row row-cols-3 g-3">
   <div class="col">
@@ -135,14 +135,14 @@
 </div>
 
 
-<h4>運用情境</h4>
+<h4> 運用情境 </h4>
 
-<p>使用 row-cols-{中斷點}-{欄數} 來製作不同欄線規劃</p>
+<p> 使用 row-cols-{中斷點}-{欄數} 來製作不同欄線規劃 </p>
 
 <ul>
-  <li>行動版 xs：2 欄</li>
-  <li>平板 md：3 大欄</li>
-  <li>桌面版 xl：4 大欄</li>
+  <li> 行動版 xs：2 欄 </li>
+  <li> 平板 md：3 大欄 </li>
+  <li> 桌面版 xl：4 大欄 </li>
 </ul>
 <!-- 想切幾欄就直接填，不必自己去換算 -->
 <div class="row row-cols-2 row-cols-md-3 row-cols-lg-4 g-3">
@@ -225,7 +225,7 @@
     
     </div>
     <div class="mt-3 text-end p-2 bg-light rounded">
-      <small class="text-black-50 fw-light mb-0">文件版本：2022/01/20</small>
+      <small class="text-black-50 fw-light mb-0"> 文件版本：2022/01/20</small>
     </div>
   </ul>
 </div>
@@ -238,7 +238,7 @@
 
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-bs5 shadow">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊</a>
+    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊 </a>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -266,7 +266,7 @@
 
 <footer class="footer py-2 bg-light">
   <div class="container text-center">
-    <small class="text-black-50 fw-light mb-0">六角學院 Bootstrap 5 課程專屬文件</small>
+    <small class="text-black-50 fw-light mb-0"> 六角學院 Bootstrap 5 課程專屬文件 </small>
   </div>
 </footer>
 <link rel="stylesheet" href="/stylesheets/all.css">
