--- a/components/component-javascript-intro.html
+++ b/components/component-javascript-intro.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html><html lang="zh-TW"><head><title>元件與 JavaScript</title><meta name="viewport" content="width=device-width, initial-scale=1"><link href="images/favicon.ico" rel="shortcut icon"><meta charset="UTF-8"><script src="/javascripts/vendor.js"></script></head><body class="bg-lighter">
+<!DOCTYPE html><html lang="zh-TW"><head><title > 元件與 JavaScript</title><meta name="viewport" content="width=device-width, initial-scale=1"><link href="images/favicon.ico" rel="shortcut icon"><meta charset="UTF-8"><script src="/javascripts/vendor.js"></script></head><body class="bg-lighter">
 <div class="container main my-5"><div class="row justify-content-center"><main class="col-md-8 post">
-<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">元件與 JavaScript</h1><small>檔名：<code>component-javascript-intro.html</code></small></div>
+<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted"> 元件與 JavaScript</h1><small > 檔名：<code>component-javascript-intro.html</code></small></div>
 <!-- 🔥🔥練習開始🔥🔥 -->
-<h2>關於 Data 屬性</h2>
+<h2> 關於 Data 屬性 </h2>
 
-<p>在 Bootstrap 中，如果要透過 HTML 正確對應 JavaScript 互動方法，均需要使用 data-bs-* 來調用</p>
+<p> 在 Bootstrap 中，如果要透過 HTML 正確對應 JavaScript 互動方法，均需要使用 data-bs-* 來調用 </p>
 
 <!-- Button trigger modal -->
 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
@@ -31,7 +31,7 @@
 </div>
 
 
-<h2>建構方式呼叫 Bootstrap JavaScript API</h2>
+<h2> 建構方式呼叫 Bootstrap JavaScript API</h2>
 
 <button type="button" class="btn btn-primary" id="myBtn">
   按我
@@ -57,14 +57,14 @@
 
 <script>
 
-  // (() => {
-  //   const myModal = new bootstrap.Modal(document.getElementById('sampleModal'));
-  //   const btn = document.querySelector('#myBtn');
+  (() => {
+    const myModal = new bootstrap.Modal(document.getElementById('sampleModal'));
+    const btn = document.querySelector('#myBtn');
 
-  //   btn.addEventListener('click', () => {
-  //     myModal.show();
-  //   });
-  // })();
+    btn.addEventListener('click', () => {
+      myModal.show();
+    });
+  })();
 </script>
 <!-- 🙇🙇練習結束🙇🙇 -->
 </main>
@@ -247,7 +247,7 @@
     
     </div>
     <div class="mt-3 text-end p-2 bg-light rounded">
-      <small class="text-black-50 fw-light mb-0">文件版本：2022/01/20</small>
+      <small class="text-black-50 fw-light mb-0"> 文件版本：2022/01/20</small>
     </div>
   </ul>
 </div>
@@ -260,7 +260,7 @@
 
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-bs5 shadow">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊</a>
+    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊 </a>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -288,7 +288,7 @@
 
 <footer class="footer py-2 bg-light">
   <div class="container text-center">
-    <small class="text-black-50 fw-light mb-0">六角學院 Bootstrap 5 課程專屬文件</small>
+    <small class="text-black-50 fw-light mb-0"> 六角學院 Bootstrap 5 課程專屬文件 </small>
   </div>
 </footer>
 <link rel="stylesheet" href="/stylesheets/all.css">
