--- a/components/accordion.html
+++ b/components/accordion.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html><html lang="zh-TW"><head><title>Accordion</title><meta name="viewport" content="width=device-width, initial-scale=1"><link href="images/favicon.ico" rel="shortcut icon"><meta charset="UTF-8"><script src="/javascripts/vendor.js"></script></head><body class="bg-lighter">
 <div class="container main my-5"><div class="row justify-content-center"><main class="col-md-8 post">
-<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">Accordion</h1><small>檔名：<code>accordion.html</code></small></div>
+<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">Accordion</h1><small > 檔名：<code>accordion.html</code></small></div>
 <!-- 🔥🔥練習開始🔥🔥 -->
-<h2>範例</h2>
+<h2> 範例 </h2>
 
-<p>使用 Accordion 的摺疊效果</p>
+<p> 使用 Accordion 的摺疊效果 </p>
 
 <ul>
-  <li>務必載入 Bootstrap JavaScript</li>
-  <li>外層元素必須要有 ID，內層的元素 data-bs-parent 必須對應外層（確保只會展開一個）</li>
-  <li>被折疊的項目，必須有獨立的 ID 名稱，按鈕加入 data-bs-toggle="collapse" 及 data-bs-target 對應此名稱</li>
+  <li> 務必載入 Bootstrap JavaScript</li>
+  <li> 外層元素必須要有 ID，內層的元素 data-bs-parent 必須對應外層（確保只會展開一個）</li>
+  <li> 被折疊的項目，必須有獨立的 ID 名稱，按鈕加入 data-bs-toggle="collapse" 及 data-bs-target 對應此名稱 </li>
 </ul>
 
 <div class="demo">
     <div class="accordion" id="accordionExample">
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingOne">
-            <button class="accordion-button" type="button" 練習 練習 aria-expanded="true" aria-controls="collapseOne">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
               Accordion Item #1
             </button>
           </h2>
@@ -28,7 +28,7 @@
         </div>
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingTwo">
-            <button class="accordion-button collapsed" type="button" 練習 練習 aria-expanded="false" aria-controls="collapseTwo">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
               Accordion Item #2
             </button>
           </h2>
@@ -40,7 +40,7 @@
         </div>
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingThree">
-            <button class="accordion-button collapsed" type="button" 練習 練習 aria-expanded="false" aria-controls="collapseThree">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
               Accordion Item #3
             </button>
           </h2>
@@ -54,10 +54,10 @@
 </div>
 
 <h2>Flush</h2>
-<h6>加上 <code>.accordion-flush</code> 來移除預設 <code>background-color</code>、 外框和圓角使該手風琴能和父容器緊鄰。</h6>
+<h6> 加上 <code>.accordion-flush</code> 來移除預設 <code>background-color</code>、 外框和圓角使該手風琴能和父容器緊鄰。</h6>
 
 <div class="demo">
-    <div class="accordion 練習" id="accordionFlushExample">
+    <div class="accordion accordion-flush" id="accordionFlushExample">
         <div class="accordion-item">
           <h2 class="accordion-header" id="flush-headingOne">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
@@ -93,7 +93,7 @@
 
 <h2>Always open</h2>
 
-<p>移除內層 data-bs-parent 則可以將 accordion 的效果總是展開。</p>
+<p> 移除內層 data-bs-parent 則可以將 accordion 的效果總是展開。</p>
 
 <div class="demo">
     <div class="accordion" id="accordionPanelsStayOpenExample">
@@ -104,7 +104,7 @@
             </button>
           </h2>
           <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne"
-          data-bs-parent="#accordionPanelsStayOpenExample">
+          >
             <div class="accordion-body">
               <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
             </div>
@@ -117,7 +117,7 @@
             </button>
           </h2>
           <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo"
-          data-bs-parent="#accordionPanelsStayOpenExample">
+          >
             <div class="accordion-body">
               <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
             </div>
@@ -130,7 +130,7 @@
             </button>
           </h2>
           <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree"
-          data-bs-parent="#accordionPanelsStayOpenExample">
+          >
             <div class="accordion-body">
               <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
             </div>
@@ -319,7 +319,7 @@
     
     </div>
     <div class="mt-3 text-end p-2 bg-light rounded">
-      <small class="text-black-50 fw-light mb-0">文件版本：2022/01/20</small>
+      <small class="text-black-50 fw-light mb-0"> 文件版本：2022/01/20</small>
     </div>
   </ul>
 </div>
@@ -332,7 +332,7 @@
 
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-bs5 shadow">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊</a>
+    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊 </a>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -360,7 +360,7 @@
 
 <footer class="footer py-2 bg-light">
   <div class="container text-center">
-    <small class="text-black-50 fw-light mb-0">六角學院 Bootstrap 5 課程專屬文件</small>
+    <small class="text-black-50 fw-light mb-0"> 六角學院 Bootstrap 5 課程專屬文件 </small>
   </div>
 </footer>
 <link rel="stylesheet" href="/stylesheets/all.css">
