--- a/components/badges.html
+++ b/components/badges.html
@@ -1,71 +1,71 @@
 <!DOCTYPE html><html lang="zh-TW"><head><title>Badges</title><meta name="viewport" content="width=device-width, initial-scale=1"><link href="images/favicon.ico" rel="shortcut icon"><meta charset="UTF-8"><script src="/javascripts/vendor.js"></script></head><body class="bg-lighter">
 <div class="container main my-5"><div class="row justify-content-center"><main class="col-md-8 post">
-<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">Badges</h1><small>檔名：<code>badges.html</code></small></div>
+<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">Badges</h1><small > 檔名：<code>badges.html</code></small></div>
 <!-- 🔥🔥練習開始🔥🔥 -->
-<h2>範例</h2>
+<h2> 範例 </h2>
 
-<p>標籤可以運用在標題上</p>
+<p> 標籤可以運用在標題上 </p>
 
 <div class="demo">
-  <h1>Example heading <span class="練習 bg-secondary">New</span></h1>
-  <h2>Example heading <span class="練習 bg-secondary">New</span></h2>
-  <h3>Example heading <span class="練習 bg-secondary">New</span></h3>
-  <h4>Example heading <span class="練習 bg-secondary">New</span></h4>
-  <h5>Example heading <span class="練習 bg-secondary">New</span></h5>
-  <h6>Example heading <span class="練習 bg-secondary">New</span></h6>
+  <h1>Example heading <span class="badge bg-secondary">New</span></h1>
+  <h2>Example heading <span class="badge bg-secondary">New</span></h2>
+  <h3>Example heading <span class="badge bg-secondary">New</span></h3>
+  <h4>Example heading <span class="badge bg-secondary">New</span></h4>
+  <h5>Example heading <span class="badge bg-secondary">New</span></h5>
+  <h6>Example heading <span class="badge bg-secondary">New</span></h6>
 </div>
 
-<h4>標籤可以作為連結或按鈕的一部分</h4>
+<h4> 標籤可以作為連結或按鈕的一部分 </h4>
 
 <div class="demo">
   <button type="button" class="btn btn-primary">
-    Notifications <span class="練習 bg-secondary">4</span>
+    Notifications <span class="badge bg-secondary">4</span>
   </button>
 </div>
 
 
-<h2>背景顏色</h2>
+<h2> 背景顏色 </h2>
 
-<p>可以使用 bg-{情境色} 來調整 badge 的色彩，必要時可加入 text-dark 將文字改為深色</p>
+<p> 可以使用 bg-{情境色} 來調整 badge 的色彩，必要時可加入 text-dark 將文字改為深色 </p>
 
 <div class="demo">
-  <span class="badge 練習">Primary</span>
-  <span class="badge 練習">Secondary</span>
-  <span class="badge 練習">Success</span>
-  <span class="badge 練習">Danger</span>
+  <span class="badge bg-primary">Primary</span>
+  <span class="badge bg-secondary">Secondary</span>
+  <span class="badge bg-success">Success</span>
+  <span class="badge bg-danger">Danger</span>
   <span class="badge bg-warning text-dark">Warning</span>
   <span class="badge bg-info text-dark">Info</span>
   <span class="badge bg-light text-dark">Light</span>
   <span class="badge bg-dark">Dark</span>
 </div>
 
-<h2>膠囊標籤</h2>
-<h6>使用 <code>.rounded-pill</code> 通用類別可以透過 <code>border-radius</code> 使標籤增加圓角。</h6>
+<h2> 膠囊標籤 </h2>
+<h6> 使用 <code>.rounded-pill</code> 通用類別可以透過 <code>border-radius</code> 使標籤增加圓角。</h6>
 
 <div class="demo">
-  <span class="badge 練習 bg-primary">Primary</span>
-  <span class="badge 練習 bg-secondary">Secondary</span>
-  <span class="badge 練習 bg-success">Success</span>
-  <span class="badge 練習 bg-danger">Danger</span>
-  <span class="badge 練習 bg-warning text-dark">Warning</span>
-  <span class="badge 練習 bg-info text-dark">Info</span>
-  <span class="badge 練習 bg-light text-dark">Light</span>
-  <span class="badge 練習 bg-dark">Dark</span>
+  <span class="badge rounded-pill bg-primary">Primary</span>
+  <span class="badge rounded-pill bg-secondary">Secondary</span>
+  <span class="badge rounded-pill bg-success">Success</span>
+  <span class="badge rounded-pill bg-danger">Danger</span>
+  <span class="badge rounded-pill bg-warning text-dark">Warning</span>
+  <span class="badge rounded-pill bg-info text-dark">Info</span>
+  <span class="badge rounded-pill bg-light text-dark">Light</span>
+  <span class="badge rounded-pill bg-dark">Dark</span>
 </div>
 
-<h2>定位技巧</h2>
+<h2> 定位技巧 </h2>
 
-<p>使用通用類別，製作按鈕的額外提示效果</p>
+<p> 使用通用類別，製作按鈕的額外提示效果 </p>
 
 <ul>
-  <li>外層加入：position-relative</li>
-  <li>內層：position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger</li>
+  <li> 外層加入：position-relative</li>
+  <li> 內層：position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger</li>
 </ul>
 
 <div class="demo">
-  <button type="button" class="btn btn-primary 練習">
+  <button type="button" class="btn btn-primary position-relative">
     Inbox
-    <span class="練習">
+    <span class="badge bg-danger position-absolute start-100 top-0 translate-middle">
       99+
       <span class="visually-hidden">unread messages</span>
     </span>
@@ -253,7 +253,7 @@
     
     </div>
     <div class="mt-3 text-end p-2 bg-light rounded">
-      <small class="text-black-50 fw-light mb-0">文件版本：2022/01/20</small>
+      <small class="text-black-50 fw-light mb-0"> 文件版本：2022/01/20</small>
     </div>
   </ul>
 </div>
@@ -266,7 +266,7 @@
 
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-bs5 shadow">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊</a>
+    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊 </a>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -294,7 +294,7 @@
 
 <footer class="footer py-2 bg-light">
   <div class="container text-center">
-    <small class="text-black-50 fw-light mb-0">六角學院 Bootstrap 5 課程專屬文件</small>
+    <small class="text-black-50 fw-light mb-0"> 六角學院 Bootstrap 5 課程專屬文件 </small>
   </div>
 </footer>
 <link rel="stylesheet" href="/stylesheets/all.css">
