--- a/components/breadcrumb.html
+++ b/components/breadcrumb.html
@@ -1,30 +1,31 @@
 <!DOCTYPE html><html lang="zh-TW"><head><title>Breadcrumb</title><meta name="viewport" content="width=device-width, initial-scale=1"><link href="images/favicon.ico" rel="shortcut icon"><meta charset="UTF-8"><script src="/javascripts/vendor.js"></script></head><body class="bg-lighter">
 <div class="container main my-5"><div class="row justify-content-center"><main class="col-md-8 post">
-<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">Breadcrumb</h1><small>檔名：<code>breadcrumb.html</code></small></div>
+<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">Breadcrumb</h1><small > 檔名：<code>breadcrumb.html</code></small></div>
 <!-- 🔥🔥練習開始🔥🔥 -->
 <h2>Example</h2>
 
-<p>加入麵包屑</p>
+<p> 加入麵包屑 </p>
 
 <ul>
-  <li>外層 ol 加入 .breadcrumb</li>
+  <li> 外層 ol 加入 .breadcrumb</li>
   <li>li 加入 .breadcrumb-item </li>
-  <li>當前頁面加入 .active</li>
+  <!-- 顯示當前頁面 -->
+  <li> 當前頁面加入 .active</li>
 </ul>
 
 <div class="demo">
     <nav aria-label="breadcrumb">
-        <ol class="練習">
-          <li class="練習"><a href="#">Home</a></li>
-          <li class="練習"><a href="#">Library</a></li>
-          <li class="練習 練習" aria-current="page">Data</li>
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a href="#">Home</a></li>
+          <li class="breadcrumb-item"><a href="#">Library</a></li>
+          <li class="breadcrumb-item active" aria-current="page">Data</li>
         </ol>
     </nav>
 </div>
 
 <h2>Dividers</h2>
 
-<p>透過 <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/::before">::before</a> 以及 <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/content">content</a> 而自動被加入在 CSS 中。可以透過修改本地 CSS 自定義屬性 <code>--bs-breadcrumb-divider</code> 或 <code>$breadcrumb-divider</code> Sass 變數來改變</p>
+<p> 透過 <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/::before">::before</a> 以及 <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/content">content</a> 而自動被加入在 CSS 中。可以透過修改本地 CSS 自定義屬性 <code>--bs-breadcrumb-divider</code> 或 <code>$breadcrumb-divider</code> Sass 變數來改變 </p>
 
 <div class="demo">
     <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
@@ -35,7 +36,7 @@
     </nav>
 </div>
 
-<p>也可以使用<b>嵌入式 SVG 圖示</b>。通過我們的 CSS 自定義屬性，或是使用 Sass 變數來應用它。</p>
+<p> 也可以使用 <b> 嵌入式 SVG 圖示 </b>。通過我們的 CSS 自定義屬性，或是使用 Sass 變數來應用它。</p>
 
 <div class="demo">
     <nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='currentColor'/%3E%3C/svg%3E&#34;);" aria-label="breadcrumb">
@@ -227,7 +228,7 @@
     
     </div>
     <div class="mt-3 text-end p-2 bg-light rounded">
-      <small class="text-black-50 fw-light mb-0">文件版本：2022/01/20</small>
+      <small class="text-black-50 fw-light mb-0"> 文件版本：2022/01/20</small>
     </div>
   </ul>
 </div>
@@ -240,7 +241,7 @@
 
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-bs5 shadow">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊</a>
+    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊 </a>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -268,7 +269,7 @@
 
 <footer class="footer py-2 bg-light">
   <div class="container text-center">
-    <small class="text-black-50 fw-light mb-0">六角學院 Bootstrap 5 課程專屬文件</small>
+    <small class="text-black-50 fw-light mb-0"> 六角學院 Bootstrap 5 課程專屬文件 </small>
   </div>
 </footer>
 <link rel="stylesheet" href="/stylesheets/all.css">
