--- a/components/buttons.html
+++ b/components/buttons.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html><html lang="zh-TW"><head><title>Buttons</title><meta name="viewport" content="width=device-width, initial-scale=1"><link href="images/favicon.ico" rel="shortcut icon"><meta charset="UTF-8"><script src="/javascripts/vendor.js"></script></head><body class="bg-lighter">
 <div class="container main my-5"><div class="row justify-content-center"><main class="col-md-8 post">
-<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">Buttons</h1><small>檔名：<code>buttons.html</code></small></div>
+<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">Buttons</h1><small > 檔名：<code>buttons.html</code></small></div>
 <!-- 🔥🔥練習開始🔥🔥 -->
 <h2>Examples</h2>
 
-<p>按鈕結構包含 btn 加上 btn-{情境色}</p>
+<p> 按鈕結構包含 btn 加上 btn-{情境色}</p>
 
 <div class="demo">
-  <button type="button" class="練習">Primary</button>
-  <button type="button" class="練習">Secondary</button>
-  <button type="button" class="練習">Success</button>
-  <button type="button" class="練習">Danger</button>
-  <button type="button" class="練習">Warning</button>
-  <button type="button" class="練習">Info</button>
-  <button type="button" class="練習">Light</button>
-  <button type="button" class="練習">Dark</button>
+  <button type="button" class="btn btn-primary">Primary</button>
+  <button type="button" class="btn btn-secondary">Secondary</button>
+  <button type="button" class="btn btn-success">Success</button>
+  <button type="button" class="btn btn-danger">Danger</button>
+  <button type="button" class="btn btn-warning">Warning</button>
+  <button type="button" class="btn btn-info">Info</button>
+  <button type="button" class="btn btn-light">Light</button>
+  <button type="button" class="btn btn-dark">Dark</button>
 
   <!-- btn-link 是具有按鈕尺寸的連結樣式按鈕 -->
   <button type="button" class="btn btn-link">Link</button>
@@ -22,7 +22,7 @@
 
 <h2>Button tags</h2>
 
-<p>按鈕可以運用在各種標籤上</p>
+<p> 按鈕可以運用在各種標籤上 </p>
 
 <div class="demo">
   <a class="btn btn-primary" href="#" role="button">Link</a>
@@ -34,56 +34,58 @@
 
 <h2>Outline buttons</h2>
 
-<p>可以使用 btn-outline-{情境色} 製作 outline 形式的按鈕</p>
+<p> 可以使用 btn-outline-{情境色} 製作 outline 形式的按鈕 </p>
 
 <div class="demo">
-  <button type="button" class="btn btn-練習-primary">Primary</button>
-  <button type="button" class="btn btn-練習-secondary">Secondary</button>
-  <button type="button" class="btn btn-練習-success">Success</button>
-  <button type="button" class="btn btn-練習-danger">Danger</button>
-  <button type="button" class="btn btn-練習-warning">Warning</button>
-  <button type="button" class="btn btn-練習-info">Info</button>
-  <button type="button" class="btn btn-練習-light">Light</button>
-  <button type="button" class="btn btn-練習-dark">Dark</button>
+  <button type="button" class="btn btn-outline-primary">Primary</button>
+  <button type="button" class="btn btn-outline-secondary">Secondary</button>
+  <button type="button" class="btn btn-outline-success">Success</button>
+  <button type="button" class="btn btn-outline-danger">Danger</button>
+  <button type="button" class="btn btn-outline-warning">Warning</button>
+  <button type="button" class="btn btn-outline-info">Info</button>
+  <button type="button" class="btn btn-outline-light">Light</button>
+  <button type="button" class="btn btn-outline-dark">Dark</button>
 </div>
 
 <h2>Sizes</h2>
 
-<p>可以使用 btn-lg, btn-sm 製作大小類型的按鈕</p>
+<p> 可以使用 btn-lg, btn-sm 製作大小類型的按鈕 </p>
 
 <div class="demo">
-  <button type="button" class="btn btn-primary 練習">Large button</button>
-  <button type="button" class="btn btn-secondary 練習">Large button</button>    
-  <button type="button" class="btn btn-primary 練習">Small button</button>
-  <button type="button" class="btn btn-secondary 練習">Small button</button>    
+  <button type="button" class="btn btn-primary btn-large">Large button</button>
+  <button type="button" class="btn btn-secondary btn-large">Large button</button>    
+  <button type="button" class="btn btn-primary btn-sm">Small button</button>
+  <button type="button" class="btn btn-secondary btn-sm">Small button</button>    
 </div>
 
 
 <h2>Disabled state</h2>
 
-<p>button 標籤的按鈕可以加入 disabled 的屬性禁用按鈕</p>
+<p>button 標籤的按鈕可以加入 disabled 的屬性禁用按鈕 </p>
 
 <div class="demo">
-  <button type="button" class="btn btn-lg btn-primary" 練習>Primary button</button>
-  <button type="button" class="btn btn-secondary btn-lg" 練習>Button</button> 
+  <button type="button" class="btn btn-lg btn-primary" disabled> Primary button</button>
+  <button type="button" class="btn btn-secondary btn-lg" disabled> Button</button> 
 </div>
 
-<h4>使用 <code>&lt;a&gt;</code> 元素的禁用其行為與其他按鈕略有不同：</h4>
+<h4> 使用 <code>&lt;a&gt;</code> 元素的禁用其行為與其他按鈕略有不同：</h4>
 <ul>
   <li><code>&lt;a&gt;</code> 不支援 <code>disabled</code> 屬性，所以你必須添加 <code>.disabled</code> 使它在視覺上看起來被禁用。</li>
-  <li>加入一些友善的樣式，以禁用游標上的所有 <code>pointer-events</code>。</li>
-  <li>禁用按鈕應包含 <code>aria-disabled="true"</code> 屬性來向輔助性技術指示元素的狀態。</li>
+  <li> 加入一些友善的樣式，以禁用游標上的所有 <code>pointer-events</code>。</li>
+  <!-- 讓特殊裝置知道這個按鈕被禁用 -->
+  <li> 禁用按鈕應包含 <code>aria-disabled="true"</code> 屬性來向輔助性技術指示元素的狀態。</li>
 </ul>
 
 <div class="demo">
-  <a href="#" class="btn btn-primary btn-lg 練習" tabindex="-1" role="button" aria-disabled="true">Primary link</a>
-  <a href="#" class="btn btn-secondary btn-lg 練習" tabindex="-1" role="button" aria-disabled="true">Link</a>
+  <!-- 記得 a 標籤套用禁用時，要連同 tabindex="-1" 一起加上去，否則會被透過 Tab 按鍵 切換到該項目上頭 -->
+  <a href="#" class="btn btn-primary btn-lg disabled" tabindex="-1" role="button" aria-disabled="true">Primary link</a>
+  <a href="#" class="btn btn-secondary btn-lg disabled" tabindex="-1" role="button" aria-disabled="true">Link</a>
 </div>
 
 <h2>Block buttons</h2>
 
-<p>官方文件寫法 Display Grid（加入 d-grid gap-2）</p>
-
+<p> 官方文件寫法 Display Grid（加入 d-grid gap-2）</p>
+<!--  grid 會使元素變為類似區塊元素的效果，預設會佔滿整行 -->
 <div class="demo">
   <div class="d-grid gap-2">
     <button class="btn btn-primary" type="button">Button</button>
@@ -91,28 +93,29 @@
   </div>
 </div>
 
-<p>另一種寫法搭配使用 width: 100%</p>
+<p> 另一種寫法搭配使用 width: 100%</p>
 
 <div class="demo">
-  <button class="btn btn-primary 練習" type="button">Button</button>
-  <button class="btn btn-primary 練習" type="button">Button</button>
+  <button class="btn btn-primary w-100" type="button">Button</button>
+  <button class="btn btn-primary w-100 mt-2" type="button">Button</button>
 </div>
 
-<h4>以下為一個響應式的範例</h4>
+<h4> 以下為一個響應式的範例 </h4>
 
-<p>行動版為滿寬，桌面版為單行</p>
-
+<p> 行動版為滿寬，桌面版為單行 </p>
+<!-- 使用 w100 的作法無法做到因應裝置不同大小 -->
 <div class="demo">
-  <div class="練習">
+  <!-- 手機使用 d-gird, 手機以上回復預設的 block -->
+  <div class="d-grid gap-2 d-md-block">
     <button class="btn btn-primary" type="button">Button</button>
     <button class="btn btn-primary" type="button">Button</button>
   </div>
 </div>
 
-<h4>可以使用網格系統的欄 (column) 類別來調整區塊級別按鈕的寬度（加入 col-6）</h4>
+<h4> 可以使用網格系統的欄 (column) 類別來調整區塊級別按鈕的寬度（加入 col-6）</h4>
 
 <div class="demo">
-  <div class="d-grid gap-2 練習 mx-auto">
+  <div class="d-grid gap-2 col-6 mx-auto">
     <button class="btn btn-primary" type="button">Button</button>
     <button class="btn btn-primary" type="button">Button</button>
   </div>
@@ -120,12 +123,12 @@
 
 
 <h2>Toggle states</h2>
-<p>加入 <code>data-bs-toggle="button"</code> 來切換按鈕的 <code>active</code> 狀態。</p>
+<p> 加入 <code>data-bs-toggle="button"</code> 來切換按鈕的 <code>active</code> 狀態。</p>
 
 <div class="demo">
-  <button type="button" class="btn btn-primary" 練習 autocomplete="off">Toggle button</button>
-  <button type="button" class="btn btn-primary active" 練習 autocomplete="off" aria-pressed="true">Active toggle button</button>
-  <button type="button" class="btn btn-primary" disabled 練習 autocomplete="off">Disabled toggle button</button>
+  <button type="button" class="btn btn-outline-primary" data-bs-toggle="button" autocomplete="off">Toggle button</button>
+  <button type="button" class="btn btn-outline-primary active" data-bs-toggle="button" autocomplete="off" aria-pressed="true">Active toggle button</button>
+  <button type="button" class="btn btn-outline-primary" disabled data-bs-toggle="button" autocomplete="off">Disabled toggle button</button>
 </div>
 
 <!-- 🙇🙇練習結束🙇🙇 -->
@@ -309,7 +312,7 @@
     
     </div>
     <div class="mt-3 text-end p-2 bg-light rounded">
-      <small class="text-black-50 fw-light mb-0">文件版本：2022/01/20</small>
+      <small class="text-black-50 fw-light mb-0"> 文件版本：2022/01/20</small>
     </div>
   </ul>
 </div>
@@ -322,7 +325,7 @@
 
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-bs5 shadow">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊</a>
+    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊 </a>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -350,7 +353,7 @@
 
 <footer class="footer py-2 bg-light">
   <div class="container text-center">
-    <small class="text-black-50 fw-light mb-0">六角學院 Bootstrap 5 課程專屬文件</small>
+    <small class="text-black-50 fw-light mb-0"> 六角學院 Bootstrap 5 課程專屬文件 </small>
   </div>
 </footer>
 <link rel="stylesheet" href="/stylesheets/all.css">
