--- a/components/buttonGroup.html
+++ b/components/buttonGroup.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html><html lang="zh-TW"><head><title>Button group</title><meta name="viewport" content="width=device-width, initial-scale=1"><link href="images/favicon.ico" rel="shortcut icon"><meta charset="UTF-8"><script src="/javascripts/vendor.js"></script></head><body class="bg-lighter">
 <div class="container main my-5"><div class="row justify-content-center"><main class="col-md-8 post">
-<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">Button group</h1><small>檔名：<code>buttonGroup.html</code></small></div>
+<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">Button group</h1><small > 檔名：<code>buttonGroup.html</code></small></div>
 <!-- 🔥🔥練習開始🔥🔥 -->
 <h2>Basic example</h2>
 
-<p>使用 btn-group 為多個按鈕加入群組</p>
+<p> 使用 btn-group 為多個按鈕加入群組 </p>
 
 <div class="demo">
-  <div class="練習" role="group" aria-label="Basic example">
+  <div class="btn-group" role="group" aria-label="Basic example">
     <button type="button" class="btn btn-primary">Left</button>
     <button type="button" class="btn btn-primary">Middle</button>
     <button type="button" class="btn btn-primary">Right</button>
@@ -16,46 +16,44 @@
 
 <h2>Mixed styles</h2>
 
-<p>內層按鈕可以加上 btn-{情境色}</p>
+<p> 內層按鈕可以加上 btn-{情境色}</p>
 
 <div class="demo">
   <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-    <button type="button" class="btn 練習">Left</button>
-    <button type="button" class="btn 練習">Middle</button>
-    <button type="button" class="btn 練習">Right</button>
+    <button type="button" class="btn btn-primary">Left</button>
+    <button type="button" class="btn btn-primary">Middle</button>
+    <button type="button" class="btn btn-warning">Right</button>
   </div>
 </div>
 
 <h2>Outlined styles</h2>
 
-<p>btn-outline-{情境色} 的外框按鈕一樣可以運用</p>
+<p>btn-outline-{情境色} 的外框按鈕一樣可以運用 </p>
 
 <div class="demo">
   <div class="btn-group" role="group" aria-label="Basic outlined example">
-    <button type="button" class="btn btn-練習-primary">Left</button>
-    <button type="button" class="btn btn-練習-primary">Middle</button>
-    <button type="button" class="btn btn-練習-primary">Right</button>
+    <button type="button" class="btn btn-outline-primary">Left</button>
+    <button type="button" class="btn btn-outline-primary">Middle</button>
+    <button type="button" class="btn btn-outline-primary">Right</button>
   </div>
 </div>
 
-<h2>Checkbox and radio button groups</h2>ˋ
-
-
-<p>可以搭配 input, label 製作</p>
+<h2>Checkbox and radio button groups</h2>
+<p> 可以搭配 input, label 製作 </p>
 
 <ul>
   <li>checkbox 需加上 .btn-check</li>
-  <li>input 在前、label 在後</li>
-  <li>label for 與 input id 需要對應</li>
+  <li>input 在前、label 在後 </li>
+  <li>label for 與 input id 需要對應 </li>
 </ul>
 
 <div class="demo">
   <div class="btn-group" role="group" aria-label="Basic checkbox toggle button group">
-    <input type="checkbox" class="練習" 練習 autocomplete="off">
-    <label class="btn btn-outline-primary" 練習>Checkbox 1</label>
+    <input type="checkbox" class="btn-check" id="btncheck1" autocomplete="off">
+    <label class="btn btn-outline-primary" for="btncheck1"> Checkbox 1</label>
     
-    <label class="btn btn-outline-primary" for="btncheck2">Checkbox 2</label>
     <input type="checkbox" class="btn-check" id="btncheck2" autocomplete="off">
+    <label class="btn btn-outline-primary" for="btncheck2">Checkbox 2</label>
     
     <input type="checkbox" class="btn-check" id="btncheck3" autocomplete="off">
     <label class="btn btn-outline-primary" for="btncheck3">Checkbox 3</label>
@@ -80,7 +78,8 @@
 <p>btn-toolbar 可以包含多個 btn-group</p>
 
 <div class="demo">
-  <div class="練習" role="toolbar" aria-label="Toolbar with button groups">
+  <!-- 群組多個 btn-group (預設會調整間距) -->
+  <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
     <div class="btn-group me-2" role="group" aria-label="First group">
       <button type="button" class="btn btn-primary">1</button>
       <button type="button" class="btn btn-primary">2</button>
@@ -98,9 +97,9 @@
   </div>
 </div>
 
-<h4>將 input 群組與工具列中的按鈕群組進行混合</h4>
+<h4> 將 input 群組與工具列中的按鈕群組進行混合 </h4>
 
-<p>可以搭配 input-group 一起使用</p>
+<p> 可以搭配 input-group 一起使用 </p>
 
 <div class="demo">
   <div class="btn-toolbar mb-3" role="toolbar" aria-label="Toolbar with button groups">
@@ -110,13 +109,13 @@
       <button type="button" class="btn btn-outline-secondary">3</button>
       <button type="button" class="btn btn-outline-secondary">4</button>
     </div>
-    <div class="練習">
+    <div class="input-group">
       <div class="input-group-text" id="btnGroupAddon">@</div>
       <input type="text" class="form-control" placeholder="Input group example" aria-label="Input group example" aria-describedby="btnGroupAddon">
     </div>
   </div>
   <!-- .btn-toolbar 也是 flex 結構，可以使用 flex 語法進行對齊調整 -->
-  <div class="btn-toolbar 練習" role="toolbar" aria-label="Toolbar with button groups">
+  <div class="btn-toolbar justify-content-between" role="toolbar" aria-label="Toolbar with button groups">
     <div class="btn-group" role="group" aria-label="First group">
       <button type="button" class="btn btn-outline-secondary">1</button>
       <button type="button" class="btn btn-outline-secondary">2</button>
@@ -131,10 +130,10 @@
 </div>
 
 <h2>Sizing</h2>
-<h6>只需要在每個帶有 <code>.btn-group</code> 的元件加上 <code>.btn-group-{lg, sm}</code> 即可</h6>
+<h6> 只需要在每個帶有 <code>.btn-group</code> 的元件加上 <code>.btn-group-{lg, sm}</code> 即可 </h6>
 
 <div class="demo">
-  <div class="btn-group 練習 my-1" role="group" aria-label="Sizing example">
+  <div class="btn-group btn-group-sm my-1" role="group" aria-label="Sizing example">
     <button type="button" class="btn btn-outline-dark">Left</button>
     <button type="button" class="btn btn-outline-dark">Middle</button>
     <button type="button" class="btn btn-outline-dark">Right</button>
@@ -146,7 +145,7 @@
     <button type="button" class="btn btn-outline-dark">Right</button>
   </div>
   <br>
-  <div class="btn-group 練習 my-1" role="group" aria-label="Sizing example">
+  <div class="btn-group btn-group-lg my-1" role="group" aria-label="Sizing example">
     <button type="button" class="btn btn-outline-dark">Left</button>
     <button type="button" class="btn btn-outline-dark">Middle</button>
     <button type="button" class="btn btn-outline-dark">Right</button>
@@ -154,14 +153,14 @@
 </div>
 
 <h2>Nesting</h2>
-<p>當您想要下拉式功能表與按鈕群組混合時，只需要將 <code>.btn-group</code> 放在另一個 <code>.btn-group</code> 中即可</p>
+<p> 當您想要下拉式功能表與按鈕群組混合時，只需要將 <code>.btn-group</code> 放在另一個 <code>.btn-group</code> 中即可 </p>
 
 <div class="demo">
   <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
     <button type="button" class="btn btn-primary">1</button>
     <button type="button" class="btn btn-primary">2</button>
     
-    <div class="練習" role="group">
+    <div class="btn-group" role="group">
       <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
       Dropdown
       </button>
@@ -174,10 +173,10 @@
 </div>
 
 <h2>Vertical variation</h2>
-<p>加入 .btn-group-vertical 將一組按鈕垂直堆疊而不是水平呈現。<b>此處不支援分割下拉式功能表</b>。</p>
+<p> 加入 .btn-group-vertical 將一組按鈕垂直堆疊而不是水平呈現。<b > 此處不支援分割下拉式功能表 </b>。</p>
 
 <div class="demo">
-  <div class="練習">
+  <div class="btn-group-vertical">
     <button type="button" class="btn btn-dark">Button</button>
     <button type="button" class="btn btn-dark">Button</button>
     <button type="button" class="btn btn-dark">Button</button>
@@ -188,7 +187,7 @@
 </div>
 
 <div class="demo">
-  <div class="練習">
+  <div class="btn-group-vertical">
     <button type="button" class="btn btn-primary">Button</button>
     <button type="button" class="btn btn-primary">Button</button>
     <div class="btn-group" role="group">
@@ -233,7 +232,7 @@
 </div>
 
 <div class="demo">
-  <div class="練習">
+  <div class="btn-group-vertical">
     <input type="radio" class="btn-check" name="btnradio" id="btnradioVertical1" autocomplete="off" checked>
     <label class="btn btn-outline-danger" for="btnradioVertical1">Radio 1</label>
     
@@ -425,7 +424,7 @@
     
     </div>
     <div class="mt-3 text-end p-2 bg-light rounded">
-      <small class="text-black-50 fw-light mb-0">文件版本：2022/01/20</small>
+      <small class="text-black-50 fw-light mb-0"> 文件版本：2022/01/20</small>
     </div>
   </ul>
 </div>
@@ -438,7 +437,7 @@
 
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-bs5 shadow">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊</a>
+    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊 </a>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -466,7 +465,7 @@
 
 <footer class="footer py-2 bg-light">
   <div class="container text-center">
-    <small class="text-black-50 fw-light mb-0">六角學院 Bootstrap 5 課程專屬文件</small>
+    <small class="text-black-50 fw-light mb-0"> 六角學院 Bootstrap 5 課程專屬文件 </small>
   </div>
 </footer>
 <link rel="stylesheet" href="/stylesheets/all.css">
